--- a/chapter01.adoc
+++ b/chapter01.adoc
@@ -40,7 +40,7 @@ nearly a week.
 Bisky climbed over the last step and was finally able to see inside the
 temple. There were approximately two, three dozen skunks. She hated to admit
 it, but she did find great solace being in a room filled only with skunks.
-It was not a feeling joy or ecstasy, really, but rather...  warmth.
+It was not a feeling of joy or ecstasy, really, but rather...  warmth.
 Security. And, most importantly, understanding.
 
 It was so bright outside that from the inside of the temple, any figure who
@@ -164,10 +164,12 @@ and also weird.
 Bisky's world slowly crystallized and faded back in. Eventually, she
 remembered that she was actually at the Mephitidaean temple and that her
 father actually wasn't there. She looked around and saw the other skunks
-staring at her. Only Gardenia seemed to understand what had just happened.
-She decided now was not the time to feel embarrassed, and quietly returned
-to her place and sat down.
+staring at her. Only Gardenia seemed to understand what had just happened,
+but Bisky knew she couldn't possibly.  She decided now was not the time to
+feel embarrassed, and quietly returned to her place and sat down.
 
 As the next skunks approached the picture to make further offerings, Bisky
 confirmed to herself that episode wasn't embarrassing at all. Instead, it
 was the most clarity she had experienced in five or six days.
+
+
