--- a/chapter02.adoc
+++ b/chapter02.adoc
@@ -7,7 +7,7 @@ need to shout in order to be heard even if they were sitting right next to
 each other. Bisky and Gardenia were not accustomed to this misleadingly
 peaceful setup -- neither of them could remember a time they saw the pub in
 daylight -- but, as always, it remained a welcome and familiar spot. And the
-food was _amazing_ for a pub in Port Sokuit's Cargo District.
+food was _amazing_ for a pub in the Cargo District.
 
 The skunks approached the bar. Their favorite bartender, a gregarious but
 perpetually overworked cat named Jem, recognized the skunks from afar. Truth
@@ -93,7 +93,7 @@ I'll just try to forget about it, I've seriously creeped myself out. I
 dunno.`"
 
 "`Maybe it's, like, some sort of calling? Some kind of... did you feel
-_chosen_?`" Gardenia ventured. 
+_chosen?_`" Gardenia ventured. 
 
 "`I felt mostly like a fish out of water, to be honest.`"
 
@@ -110,4 +110,59 @@ digs you, Gardenia.`"
 
 Gardenia snorted. "`He's too cool-cool-cool for me,`" she said
 disparagingly. She grabbed a pawful of calamari and shoved it in her mouth.
-Bisky just laughed.
+Bisky just laughed and laughed. Her friend was _never_ that mean.
+
+The other animals, an alligator couple and a trio of foxes, all turned their
+heads to face the rambunctious skunk. Gardenia looked visibly uncomfortable,
+but Bisky could feel their glares weighing down on her. She combatted this
+by taking a big, deliberate swig of her beer while staring each of them
+directly in the eye. They heard her gulp the beer as it traveled down her
+throat. After a final swallow, Bisky broadcast a purposeful "`Ahhhhh`" to
+signify the beer was, in fact, refreshing -- unlike their bitter stares.
+
+"`You're drunk already?`" Gardenia whispered to Bisky.
+
+"`Yeah, well,`" Bisky proclaimed mindlessly. She took a strip of calamari,
+dipped it in the spicy sauce, and popped it in her mouth with a crunch. "`My
+dad died and I had a creeptastic séance or something at the temple. Cut me
+some slack.`"
+
+"`You're right. Sorry.`" Gardenia quietly sipped her Frisky Fizz.
+
+The skunks ate in silence for a minute. The charmingly dingy "`garden`" of
+Schooner Bailey's had returned to normal, while the other animals talked
+amongst themselves again. Bisky realized it still was actually a beautiful
+day, despite her suspicion the other animals were talking about her.
+
+Especially the foxes. They always looked so preppy. They were always the
+most popular ones. She knew this all along. It was somehow the natural order
+of things. Foxes were charming. Skunks invariably smelled bad. Foxes were
+smart and successful. Skunks had to work twice as hard to be recognized for
+their achievements. Foxes laughed and it was cute. Skunks laughed and it was
+annoying. Bisky glared very, very slightly at the foxes and slowly shook her
+head, making sure to not make any sudden or noticeable movements.
+
+"`Well, maybe going back to work and school will help you take your mind off
+of those things,`" Garden said. She didn't realize she had interrupted
+Bisky's high-speed train of thought. But Bisky didn't make it known to her,
+either.
+
+"`Yeah. I'm screwed for school. At least my professors are all
+understanding.`"
+
+"`That _is_ nice. Everyone understands what bereavement is. You don't need
+to be a skunk to understand what it's like to lose somebody.`"
+
+"`Thank the Maker,`" Bisky said. "`But, I _wasn't_ able to get the day off
+for the Mephitidaean Autumn Vigil last year. Professor Warling said the
+Vigil takes place at night, and his lecture takes place during the day, so
+there wasn't a good enough reason to take the whole day off. My ass. What a
+fishbrain. So, that's why I switched my schedule. Café in the morning and
+school at night.  Works a lot better for everyone involved, if you ask me.`"
+
+Gardenia wasn't sure what to say. She wasn't able to get that day off,
+either.
+
+Bisky finished her beer. She focused on the mug in her paw and played with
+it idly. Without looking up, she said simply, "`I think I'm ready to go back
+now.`"
