--- a/chapter03.adoc
+++ b/chapter03.adoc
@@ -9,11 +9,12 @@ be out the door at 7, arrive at Carmen's Coffee at 7:15, and then be
 prepared for customers at 7:30. In practice, though, the alarm would wake
 her up at 6, then she would lay in bed dazed and confused until 6:45, have
 barely enough time to get ready, and then arrive at the café just minutes
-before her shift. Today was one of _those_ days.
+before her shift. Today was one of _those_ days. It felt like every day was
+one of those days.
 
 "`Hey, gang,`" Bisky announced as she entered the front door. The
 super-early-morning regulars were already sitting in their regular seats
-with their regular coffees with their regular pastries. Seemed just like the
+with their regular coffees and their regular pastries. Seemed just like the
 good ole halcyon days of one week ago.
 
 There already was quite a bit of a rush. Mondays. Joyce, the squirrel,
@@ -29,3 +30,171 @@ customer, Joyce turned to Bisky and said: "`Happy Monday, Bisky. Feeling
 alright?`"
 
 "`Yes, thanks. I'll tell you at lunch.`"
+
+Bisky would meet hundreds of different animals every day. They came from all
+walks of life, different neighborhoods of Port Sokuit and even entirely
+different counties of Azuaveria. She had to deal with professional
+businessfolk as much as the poor homeless creatures. She had to deal with
+animals who couldn't make up their minds, animals who couldn't speak the
+language and animals who really had no clue about coffee. She had to deal
+with charming, friendly customers just as much as the douchenozzles.  She
+had to deal with the prank callers as well the serious calls from the
+vendors and distributors. She had to clean broken coffee grinders and vomit
+in the restrooms. It was tough work, but it wasn't terribly difficult, and
+she did a perfectly acceptable job at it.
+
+Her shift leader, Joyce, was a pleasure to work with. Bisky and Joyce alike
+remembered the first time they met, where they bonded over the fluffiness of
+their tails. It was fun and stylish to make them extra fluffy, but one had
+to deal with the costs and inconveniences that came with their maintenance.
+They also had a nasty propensity to knock over things, since they could
+become awkward and unwieldy. They remembered a customer on their first day
+on the job together, a horse who had tried to fluff his tail. It... well, it
+did not look good. Joyce and Bisky barely could contain it while taking his
+order, and remembered how challenging it was to hold their laughter until
+the instant he walked out the door. That was a good day. That wasn't one of
+_those_ days.
+
+It was a fairly uneventful Monday morning rush. Joyce believed Bisky handled
+it quite nicely, in complete contrast with the state in which she last saw
+her.
+
+Joyce and Bisky enjoyed a quick lunch together in the back alley. Only a
+sliver of sunlight could make its way through the narrow street. Bisky's
+lunch consisted of a simple sandwich of grilled vegetables, a bunch of
+grapes, and a small bag of fried worms. Joyce's "`quick lunch`" was a few
+bites from a spinach empanada she swiped from the display case, garnished
+with a cigarette or two. Bisky admired how Joyce balanced her toughness with
+her friendliness.
+
+"`Seriously, babe, I'm glad you're back. It's good to see you,`" Joyce said
+as she took a puff.
+
+"`Yeah, things feel a bit more normal again,`" Bisky agreed.
+
+"`You didn't need to go to school at all right? That'd be absolute _crap_.`"
+
+"`Most of my professors were a little ticked because it's so early in the
+school year. But they were all understanding, so I'm not in trouble or
+anything like that.`"
+
+"`Good, good. I'd beat the shit out of them if they did.`" Joyce chased some
+clouds. Bisky remembered how moving to the morning shift was the best
+decision she ever made.
+
+"`Yeah, I needed the time,`" Bisky said. As she bit into her sandwich, she
+reminded herself that the bread with which she made it did _not_ come from
+her father's bakery. "`I do honestly feel a lot better.`"
+
+"`I'm glad,`" said Joyce.
+
+"`Did anything stupid happen while I was away?`" Bisky asked.
+
+Joyce took a drag. "`Ha, yeah, that fox boy who's super into you wondered
+where you were.`"
+
+All of a sudden, Bisky didn't feel a lot better.
+
+"`I think I scare him. He clearly prefers it when you make his coffee or
+something,`" Joyce continued.
+
+Bisky pursed her lips tight.
+
+"`You know the one I'm talking about, right?`" Joyce asked as she took
+another drag.
+
+"`Yup, that's Timo. He just... usually shows up when I'm there, I guess.`"
+
+Joyce was not convinced. "`He's got a regular schedule and you know it,`"
+she said flatly. Bisky took that to be her polite way of saying "`You look
+at the clock every Thursday and wait impatiently for 3:15 PM, when Timo
+arrives and orders his medium latte with soymilk and a pawful of sugar while
+he seriously engages with you and is super interesting and he makes you feel
+good about yourself and the world, and you want to just climb over the
+counter and kiss his pretty face, but you can't because you're just a smelly
+skunk... _and you know it._`"
+
+But Bisky had a simpler retort: "`Yeah, you're right.`"
+
+Bisky noticed Joyce's cigarette was almost out. That meant lunch break was
+almost over.
+
+"`Well, babe, let's just get through this Monday, shall we?`" Joyce asked
+rhetorically. She let the cigarette drop into a puddle on the asphalt, but
+stomped it out with her boot anyway.
+
+_What a badass_, Bisky thought.
+
+---
+
+On Mondays and Wednesdays, Bisky would head out of Carmen's shortly before
+2:00 PM and walk for fifteen minutes through the Cargo District to the
+University of Azuaveria, Port Sokuit. Technically, the university was also
+in the Cargo District, but its historic bell tower and manicured lawns and
+overall cleanliness contrasted greatly with the industrial
+shipping-container mazes that were the neighborhood's namesake. Sokuitans
+usually referred to the college and its adjacent professorville as a
+separate neighborhood. It certainly felt more right to do so.
+
+Bisky climbed up the staircase to the Kasuit School of Maritime Technology,
+hopped into the main lecture hall and took a seat in the front, as close to
+Professor Churaldi as she could. He was a large but approachable lion who
+clearly had lots of time to think about a lot of things. It showed in his
+demeanor and his wardrobe. He was rearranging his lecture notes when he saw
+the skunk sit in her usual seat. He took off his glasses for a moment.
+"`Why, hello, Hibiscus,`" he said simply.  He gave a weary but genuine
+smile. 
+
+"`Hi, professor,`" Bisky said. She wiggled in her seat to get comfortable.
+Those desks were always so tiny, they could hardly accommodate a big, fluffy
+tail such as a skunk's. Once Bisky finally settled in, she realized this was
+the first time she had attended a mar-tech class without replaying that
+argument she had with her father in her head. The one where he essentially
+told her that skunks just aren't captains of big ships. Maybe small ones for
+skunks, _maybe_.  But not luxury liners nor cargo vessels. Absolutely _not_.
+
+"`Sorry, dad, I have to do this,`" Bisky said under her breath.
+
+Churaldi put the glasses back on and continued shuffling through his papers.
+In a few minutes, the actual lecture began. The lecture hall was filled to
+capacity, about one hundred students. It was another lesson in some of the
+basic martitime concepts -- _lots_ and lots of jargon. Bow, stern, port,
+starboard, hull, bowsprit, windward, leeward -- these were _just the
+beginning_. Churaldi was way past all this introductory material -- and so
+was Bisky, to a considerable extent -- but, at least he reserved enough
+generosity to ensure his students stayed _awake_ for the full hour.
+
+_Introduction to Maritime Technology_ (MAT 101), or "`mar-tech one oh one`"
+as the students called it, was a prerequisite course for virtually every
+other course at the Kasuit School. Most students who did register for it
+were interested in obtaining qualifications to pursue a career having
+something to do with the docks, or shipping. And what better place to
+receive that kind of education than the Cargo District of Port Sokuit? Bisky
+felt lucky and fortunate to have had such a unique opportunity available in
+her own backyard. Animals came from all over Azuaveria to get a quality
+maritime degree from U-Az Port Sokuit.
+
+When his lecture concluded, Professor Churaldi delivered the homework
+assignment. It was due the next time they convened, Wednesday, at the start
+of lecture. Read a chapter from the textbook and answer the questions. But,
+before dismissing the students, he made a special announcement.
+
+"`The other staff and faculty want me to remind you that this Wednesday is
+also Club Day. There's all kinds of after-school clubs for all kinds of
+special interests. Maybe you and your peers can talk about maritime
+technology in a more social or relaxed setting, rather than during the short
+time you're cramming for my exams.`"
+
+Bisky burst out a hearty "`Ha!`" but quickly discovered she was the only one
+who thought the professor's joke was funny. She lowered her tail in awkward
+shame.
+
+"`Anyway,`" the lion continued, "`I do encourage you to make friends with
+your peers. It is important and beneficial to your education. Class
+dismissed.`"
+
+None of the students were cheetahs, but they all darted out of that lecture
+hall as if they were. All of them except Bisky. She had trouble getting out
+of that tiny desk. Stupid fluffy skunk tail.
+
+
