--- a/chapter01.adoc
+++ b/chapter01.adoc
@@ -91,10 +91,11 @@ one.`"
 _Oh, shit,_ Bisky thought.
 
 One by one, all of the skunks approached the portrait and left something
-behind for him. Petrus's cousin, Acanthus, gave him a small sextant, a nod
-to their sailing hobby, and recounted an anecdote about how they nearly got
-lost at sea one time. He mentioned in passing how Bisky was jealous she
-couldn't come along for that trip. She remembered that feeling.
+behind for him. Petrus's cousin and longtime business partner, Acanthus,
+gave him a small sextant, a nod to their sailing hobby, and recounted an
+anecdote about how they nearly got lost at sea one time. He mentioned in
+passing how Bisky was jealous she couldn't come along for that trip. She
+remembered that feeling.
 
 The landlady of Petrus's bakery, Amethyst, presented a bouquet of flowers
 and, while eyeing Bisky, formally absolved him of the last month's rent he
