--- a/chapter01.adoc
+++ b/chapter01.adoc
@@ -97,10 +97,10 @@ anecdote about how they nearly got lost at sea one time. He mentioned in
 passing how Bisky was jealous she couldn't come along for that trip. She
 remembered that feeling.
 
-The landlady of Petrus's bakery, Amethyst, presented a bouquet of flowers
-and, while eyeing Bisky, formally absolved him of the last month's rent he
-hadn't yet paid. Bisky totally forgot that was a thing that needed to be
-taken care of, until that moment.
+The landlady of Petrus's bakery, Rose, presented a bouquet of flowers and,
+while eyeing Bisky, formally absolved him of the last month's rent he hadn't
+yet paid. Bisky totally forgot that was a thing that needed to be taken care
+of, until that moment.
 
 Gardenia approached with a small blueberry muffin. "`You were without a
 doubt the best baker in all of Port Sokuit. Your blueberry muffin was the
@@ -172,5 +172,3 @@ feel embarrassed, and quietly returned to her place and sat down.
 As the next skunks approached the picture to make further offerings, Bisky
 confirmed to herself that episode wasn't embarrassing at all. Instead, it
 was the most clarity she had experienced in five or six days.
-
-
