--- a/chapter03.adoc
+++ b/chapter03.adoc
@@ -127,11 +127,11 @@ _What a badass_, Bisky thought.
 
 ---
 
-On Mondays and Wednesdays, Bisky would head out of Carmen's shortly before
-2:00 PM and walk for fifteen minutes through the Cargo District to the
-University of Azuaveria, Port Sokuit. Technically, the university was also
-in the Cargo District, but its historic bell tower and manicured lawns and
-overall cleanliness contrasted greatly with the industrial
+On Mondays, Wednesdays and Fridays, Bisky would head out of Carmen's shortly
+before 2:00 PM and walk for fifteen minutes through the Cargo District to
+the University of Azuaveria, Port Sokuit. Technically, the university was
+also in the Cargo District, but its historic bell tower and manicured lawns
+and overall cleanliness contrasted greatly with the industrial
 shipping-container mazes that were the neighborhood's namesake. Sokuitans
 usually referred to the college and its adjacent professorville as a
 separate neighborhood. It certainly felt more right to do so.
@@ -196,5 +196,3 @@ dismissed.`"
 None of the students were cheetahs, but they all darted out of that lecture
 hall as if they were. All of them except Bisky. She had trouble getting out
 of that tiny desk. Stupid fluffy skunk tail.
-
-
