--- a/chapter04.adoc
+++ b/chapter04.adoc
@@ -32,10 +32,10 @@ personally found that a splash of sunflower sauce thinned with water also
 worked rather nicely on top of it all.
 
 Bisky was in the process of adding the sauce when her portable phone rang.
-She turned the phone over to discover that Amethyst was calling. Bisky's
+She turned the phone over to discover that Rose was calling. Bisky's
 eyebrows furrowed as she picked it up.
 
-"`Hi, hello Amethyst.`"
+"`Hi, hello Rose.`"
 
 "`Hello Hibiscus. How are you feeling? Is now a good time?`"
 
@@ -47,7 +47,7 @@ cooking dinner.`"
 "`Making myself some taskiak,`" Bisky said proudly, as she put the phone
 down and picked up the chopsticks.
 
-Amethyst could hear Bisky's smile through the phone. "`Good for you! A
+Rose could hear Bisky's smile through the phone. "`Good for you! A
 traditional Mephitidaean treat. Where did you get the octopus?`"
 
 "`There's a fishmonger just around the corner where I live,`" Bisky said.
@@ -56,7 +56,7 @@ _Cut to the chase, lady, whaddya want?_
 "`Good, good. I wanted to talk to you about your father's business.`"
 
 _Knew it._ "`Yup, we can do that. Oh, I wanted to thank you again about the
-whole last month of rent thing... that was very generous, Amethyst.
+whole last month of rent thing... that was very generous, Rose.
 Seriously.`"
 
 "`It was the least I could do. Now, I don't want to take too much of your
@@ -69,7 +69,7 @@ until that moment. She sat down and began to eat her meal.
 "`The truth is, Hibiscus, I'm not sure if the bakery can remain as
 successful as it was previously...`"
 
-"`I think customers came for the _food_ Amethyst, not just the company of my
+"`I think customers came for the _food_ Rose, not just the company of my
 dad,`" Bisky retorted. "`You don't trust that the other guys in there will
 do as good of a job?!`"
 
@@ -84,27 +84,26 @@ inclination, to run a business full time, since that'd interfere with your
 studies...`"
 
 Bisky was struggling to keep her balance on a tightrope over precipice of
-tears, but Amethyst kept talking. "`Is that correct? It's not within your
-means. Not on a day-to-day basis.`"
+tears, but Rose kept talking. "`Is that correct? It's not within your means.
+Not on a day-to-day basis.`"
 
 Bisky swallowed, but there was no taskiak going down her thoat. "`That's
 correct.`" After a brief moment of silence that felt like it lasted her
 father's entire life, Bisky ventured: "`You're not.. you're not going to
 force the bakery out of the building, are you?`"
 
-Amethyst was audibly confused for a beat. "`Oh, goodness gracious, no! I
-thought we already decided that Acanthus would pick up the slack day-to-day,
-even though _on paper_ you're the beneficiary of all of your father's
-assets.`"
+Rose was audibly confused for a beat. "`Oh, goodness gracious, no! I thought
+we already decided that Acanthus would pick up the slack day-to-day, even
+though _on paper_ you're the beneficiary of all of your father's assets.`"
 
 Bisky's world came back into focus. Her sigh of relief was more like gasping
 for air after having been trapped underwater.
 
-Amethyst continued. "`I'm filling out a bunch of forms, and I need to make
-sure I'm submitting the right info. I'll make it clear to the City of Port
-Sokuit that the _business_ is Acanthus's but all of Petrus's _things_ and
-his real estate are yours. He didn't own any land other than the house on
-Seashell Lane, right?`"
+Rose continued. "`I'm filling out a bunch of forms, and I need to make sure
+I'm submitting the right info. I'll make it clear to the City of Port Sokuit
+that the _business_ is Acanthus's but all of Petrus's _things_ and his real
+estate are yours. He didn't own any land other than the house on Seashell
+Lane, right?`"
 
 "`Yeah, that's right. We, uh, consolidated a lot of stuff when my mom
 died,`" Bisky confirmed.
@@ -126,7 +125,7 @@ taskiak! Take care.`"
 
 Bisky had completely forgotten about her dinner.
 
-"`Bye, Amethyst.`"
+"`Bye, Rose.`"
 
 Bisky hung up the phone. She stared at her food with ambivalence. She knew
 it made absolutely no sense, but she felt like there was no point in eating
