--- a/chapter03.adoc
+++ b/chapter03.adoc
@@ -157,7 +157,7 @@ skunks, _maybe_.  But not luxury liners nor cargo vessels. Absolutely _not_.
 
 Churaldi put the glasses back on and continued shuffling through his papers.
 In a few minutes, the actual lecture began. The lecture hall was filled to
-capacity, about one hundred students. It was another lesson in some of the
+capacity, over two hundred students. It was another lesson in some of the
 basic martitime concepts -- _lots_ and lots of jargon. Bow, stern, port,
 starboard, hull, bowsprit, windward, leeward -- these were _just the
 beginning_. Churaldi was way past all this introductory material -- and so
