--- a/chapter04.adoc
+++ b/chapter04.adoc
@@ -26,10 +26,10 @@ skunks when it came to that. Skunks had a reputation for staying up late and
 simply preferring nighttime overall.
 
 She picked up the big knife off of the wall and diced the octopus into small
-cubes. The octupus would be lightly sautéed with plenty of lemon juice, then
-the vegetables would be added and finally, diced sporzo tossed in.  Bisky
-personally found that a splash of sunflower sauce thinned with water also
-worked rather nicely on top of it all.
+cubes. The octupus would be lightly sautéed with plenty of lemon juice and
+bay leaves, then the vegetables would be added and finally, diced sporzo
+tossed in.  Bisky personally found that a splash of sunflower sauce thinned
+with water also worked rather nicely on top of it all.
 
 Bisky was in the process of adding the sauce when her portable phone rang.
 She turned the phone over to discover that Rose was calling. Bisky's
