--- a/chapter05.adoc
+++ b/chapter05.adoc
@@ -98,7 +98,7 @@ far espresso machine to clean it up.
 "`Hello, Hibiscus,`" the leopard said, even though the name tag read
 "`Bisky.`" "`I'll have a large light roast.`"
 
-_I'll have a large light roast PLEASE_. "`Do you want room?`"
+_I'll have a large light roast PLEASE._ "`Do you want room?`"
 
 "`Fill it to the brim, kit.`"
 
@@ -143,11 +143,149 @@ Joyce gently lifted the apron just a hair, to talk with Bisky eye-to-eye.
 
 "`May I come in?`"
 
-Bisky nodded imperceptibly.
+Bisky nodded.
 
 "`What a fishdick, am I right?`"
 
-Bisky snorted.
+Bisky snorted. "`You're not wrong.`"
 
-Joyce put the apron back to where it belonged. "`Go along, take five. Your
-tail is too fluffy for this crap.`"
+Joyce put the apron back to where it belonged. "`Go on, take five. Your tail
+is too fluffy for this crap.`"
+
+---
+
+Bisky was able to negotiate working half-days on Tuesdays and Thursdays to
+allow herself the ability to attend university at earlier hours on those
+days. This arrangement was espeically useful today, to get away from the
+toxic environment put in place by you-know-who. She was on campus by noon,
+where she found a spot on the main quad by the bell tower and dug into her
+taskiak. Leftovers weren't anything like the real deal, but taskiak could be
+enjoyed cold, too. There even existed some local skunk-owned businesses who
+had recently experimented with making portable varieties that specifically
+were cold for easier consumption on-the-go.  Bisky wasn't certain how to
+feel about that. Disseminating elements of skunk cuisine and skunk culture
+were always welcome, but she just wanted to ensure other animals recognized
+that it wasn't _real_ taskiak.
+
+Gardenia would ordinarily join Bisky at lunch on these days, but she was
+spending all of her time this week in the music conservatory on the other
+side of campus, practicing her violin. Bisky looked at the turquoise,
+knitted bag Gardenia had made for her and silently wished her well.
+Auditions for the campus orchestra would commence the next week. Bisky
+wasn't very musical, let alone artistic, but she knew Gardenia's talent on
+the violin was unmatched. Bisky remembered the time Gardenia came over to
+her house and presented the famous theme from Julius Marlsay's Symphony No.
+2, the theme where Bisky learned that music from a single instrument could
+make a skunk surrender and cry. _Really powerful shit,_ Bisky thought.  She
+looked around to make sure none of the other animals could hear the sad song
+playing in her head. Of course they couldn't. They wouldn't even dare ask
+what a skunk is listening to. Skunks didn't listen to music, their smell
+just made all the notes turn to musk, and crack from the damage. Bisky
+glared imperceptibly at all the other students.
+
+As her eyes scanned the quad, she detected a skunk from the sociology class
+she was about to attend.  He sat alone at a nearby table. He was tall, lanky
+and awkward-looking, and wore glassess. Bisky figured his entire wardrobe
+prioritized simplicity and comfort, given what he was currently wearing. His
+tail wasn't fluffy at all, it was... just a tail. He appeared distinterested
+in his food, merely swirling it around with his chopsticks. She put her
+now-empty container of taskiak back into her bag and approached the skunk.
+
+"`Hey, you're taking sociology with Trousker, right?`"
+
+"`Why, do you need to copy homework from me?`" the skunk said listlessly,
+concentrating on the swirling food.
+
+"`Uh, no. I was gonna ask if I could join you,`" Bisky smiled.
+
+Finally, the skunk looked up, and noticed for the first time the cute skunk
+girl who sat in the front of the class had approached him on her own
+volition.
+
+"`Um, hello, Bisky,`" he said. Bisky didn't notice, but he diverted the
+shock way from his face and into his nervous tic of fiddling with his
+glasses.
+
+Bisky was taken aback. She was about to ask him how he know her name, but he
+filled in her words for her. "`You're wondering how did I know your name.
+Everyone knows your name. You sit in the front and don't shut the hell up.`"
+
+Bisky laughed. "`You're not wrong,`" she admitted. "`It's just a super
+interesting class, and Trousker is a good professor, too, I think?`"
+
+He shrugged. "`It's a class. Haven't learned anything I didn't already know
+yet.`"
+
+Bisky sat down across from him. She noticed he had been swirling some sort
+of noodle dish. It looked super yummy.
+
+"`Well, I guess it's easier for skunks to understand concepts like hegemony
+and privilege and stuff like that,`" Bisky commented.
+
+"`Yup exactly. Forever on the bottom of the totem pole, as they say. But
+that only makes sense if you think about power in that way.`"
+
+"`What do you mean? Also, what's your name?`"
+
+"`Malchus,`" the skunk said. He nervously readjusted his glasses again, then
+receded to a more comfortable place.  "`It's a concept I picked up in my
+philosophy class. We tend to think about power in terms of '`the many`'
+being subjugated by '`the few`'. '`The few`' are on the top of some pyramid,
+some small, exclusive upper strata, and '`the many`' are on the bottom of
+this pyramid.`"
+
+"`Sounds reasonable...`" Bisky interjected.
+
+"`But it makes sense only in some situations. For example, that structure
+might describe wealth distribution very nicely, but it doesn't really
+explain the dynamic between, say, canines and skunks.`"
+
+Bisky immediately understood what Malchus meant. "`Yeah, in fact, there are
+way more dogs and foxes than there are skunks! At least around here, where
+skunks aren't exactly... plentiful.`"
+
+"`Yup exactly,`" Malchus agreed. "`In conclusion, there likely exists a more
+nuanced or complex way of describing certain interactions of power than a
+pyramid or a totem pole. Concepts like hegemony and privilege are very
+interesting and difficult things. Also, Bisky, your eyes have widened so
+much that it is beginning to scare me.`"
+
+Bisky squinted and shook her head. "`Oops, sorry, heh. I just find all of
+this stuff fascinating.`"
+
+"`Are you a sociology or philosophy major?`" Malchus asked.
+
+"`No, I'm in mar-tech.`"
+
+Malchus because at once visibly perplexed and invisibly turned on. "`That
+was unexpected,`" he stated.
+
+The bell tower struck 1 o'clock.
+
+"`Oh, shit, we should get going,`" Bisky said hurriedly.
+
+"`...actually, I'll see you there later,`" Malchus said. Bisky thought that
+was a little weird, but didn't have much time to think about it. She smiled
+and nodded and then rushed to the building where Professor Trousker led the
+small discussion-oriented sociology course.
+
+Trousker's course and classroom could seat a maximum of twenty or thirty
+students, in stark contrast to Churaldi's popular mar-tech lectures and the
+enormous lecture hall that was required in order to deliver them.
+
+Professor Trousker, a comparatively young badger, had already begun her
+class when Bisky flung the door open.
+
+"`Miss Damiat, I'm glad you could make it,`" Trousker said. "`Take your
+seat.`"
+
+"`Yes ma'am!`" Bisky complied enthusiastically. She proceeded to her
+favorite desk, the one directly in front of her professor, the one where no
+one else dared to sit.
+
+The class went almost exactly as Bisky wanted it. She learned a lot, and
+despite sitting in the very front, was able to see plenty of students get
+uncomfortable over some of the concepts Trousker was introducing. Sociology
+filled in all the gaps of Bisky's yearning for knowledge which maritime
+technology could not. Sociology _blew her mind_ wide open and shed light and
+clarity on her own life.
