--- a/chapter02.adoc
+++ b/chapter02.adoc
@@ -140,7 +140,8 @@ of things. Foxes were charming. Skunks invariably smelled bad. Foxes were
 smart and successful. Skunks had to work twice as hard to be recognized for
 their achievements. Foxes laughed and it was cute. Skunks laughed and it was
 annoying. Bisky glared very, very slightly at the foxes and slowly shook her
-head, making sure to not make any sudden or noticeable movements.
+head, making sure to not make any sudden or noticeable movements. The only
+thing worse than foxes were _dogs._
 
 "`Well, maybe going back to work and school will help you take your mind off
 of those things,`" Garden said. She didn't realize she had interrupted
