--- a/chapterx1.adoc
+++ b/chapterx1.adoc
@@ -1,4 +1,4 @@
-== Chapter 0x
+== Chapter x1 (in which Bisky DGAF at the pub)
 
 This time, Bisky and Gardenia weren't at all confused as to whether they
 were in the right place. Schooner Bailey's was absolutely packed with
