--- a/chapter05.adoc
+++ b/chapter05.adoc
@@ -105,21 +105,23 @@ _I'll have a large light roast PLEASE._ "`Do you want room?`"
 _I'm an adult skunk, you piece of shit fishdick._ "`Coming right up. That's
 quite a bit of caffeine, sir. Gonna be a busy day, huh?`"
 
-"`It will be, if you keep this up,`" he said, admiring his own claws.
+"`It will be, if you keep this up,`" he said, admiring his own claws at the
+expense of everything else in the universe.
 
 Low behind the counter, hidden from view, Bisky patted her lap rapidly seven
-or eight times. "`I guess I'll get started, then.`"
+or eight times with both paws. "`I guess I'll get started, then.`"
 
 "`Ah-yup.`"
 
 Fortunately, the snow leopard's order was super simple and required zero
 concentration. Bisky already expired all of her concentration, having just
-spent it on making sure she didn't growl or bite the snep.  Bisky was about
-to put a lid on the cup when he interrupted her. "`I don't need a lid.`"
+spent it on making sure she didn't growl or bite the snep ... or worse.
+Bisky was about to put a lid on the cup when he interrupted her. "`I don't
+need a lid.`"
 
 "`Alright, here you go. Large light roast.`"
 
-"`I know what I ordered,`" the leopard said as he thrust a credit card at
+"`I know what I ordered,`" the leopard said as he launched a credit card at
 her.
 
 Bisky was about to declare the price of the coffee out of habit, but she
@@ -135,9 +137,9 @@ Percival Montrusky.
 
 "`Thanks a lot, babe,`" he smirked. He raised his coffee cup as if to
 congratulate Bisky for her resounding success. The instant his stupid
-spotted tail was fully outside and the door closed behind him, Bisky tilted
-her head back and flipped her apron over head. Joyce turned to Bisky when
-she heard a distant, muffled "`Rrrrrggh!`"
+spotted tail was fully outside and the door closed behind him, Bisky
+launched her head back and flipped her apron over head. Joyce turned to
+Bisky when she heard a distant, muffled "`Rrrrrggh!`"
 
 Joyce gently lifted the apron just a hair, to talk with Bisky eye-to-eye.
 
