--- a/chapterx1.adoc
+++ b/chapterx1.adoc
@@ -118,8 +118,13 @@ that.`"
 "`Not sure how else to say this, Bisky, but the bouncer doesn't know nor
 does he care who you are.`"
 
-"`He doesn't need to _care_ about me. It's just unfair that everyone, even
-the well-liked regulars, --`"
+"`Look, Gardenia, Jem's working, so I owe you a hundred bucks.`"
+
+Gardenia immediately recognized Bisky was attempting to change the subject,
+but she would not have it. "`Bisky...`"
+
+Bisky sighed. "`He doesn't need to _care_ about me. It's just unfair that
+everyone, even the well-liked regulars, --`"
 
 "`Get a grip, Bisky,`" Gardenia interrupted. `"We almost got kicked out of
 this place _forever_ because of your stupid stunt.`"
