--- a/chapterx4.adoc
+++ b/chapterx4.adoc
@@ -135,8 +135,9 @@ were hung on the walls and some few statues were situated between them, in
 the middle of the hall.
 
 "`Oooh, look at this,`" Timo said excitedly but quietly. The work he was
-referring to was painted on an enormous portrait-oriented canvas; he did not
-need to walk too much further in order to enjoy it properly.
+referring to was painted on an enormous portrait-oriented canvas, perhaps
+twenty hands tall; he did not need to walk too much further in order to
+enjoy it properly.
 
 "`Okay, yeah, that's pretty cool,`" Bisky said, awestruck.
 
@@ -159,4 +160,35 @@ sculpture. But not in the mixed-media sense of a painting-as-a-sculpture.
 This zebra _could_ have been built, but instead that _built_ thing is
 captured here as a painting. It's interesting!`" Timo was all over this.
 
-"`...Yeah!`" was all Bisky could say.
+"`...Yeah!`" was all Bisky could say out loud. Internally, though, she
+wanted to tell him that the strength of her crush could pulverize an entire
+ship.
+
+The Port Sokuit MoMA was a very large, expansive space, and patrons
+typically did not take a tour of the entire collection in one day, if they
+were to take their time and soak it all in as Bisky and Timo were. Bisky
+wished she could comprehend the greatness of the works she  was looking at.
+If these artists were at all renowned, she would not know. Another one of
+those "`Gardenia to the rescue`" situations. Hardly any of them had skunkish
+names, that was for sure. Bisky convinced herself that problem could be
+easily solved by letting one of Gardenia's paintings hang on the MoMA's
+walls.
+
+An entire hour or two of museum-going had passed, and Bisky still felt
+apprehensive about talking about art with Timo. She was afraid that Timo
+would get bored of her obviously novice understanding of what she was
+looking at. She was afraid that her appreciation of the art was too
+superficial for Timo's tastes. She was also afraid that someone would try to
+get her ejected from the museum for being a skunk.  Bisky kept searching for
+signs that these would be the case, any hints or indications, but she found
+none whatsoever.  As far as Bisky could tell, Timo appeared to be genuinely
+interested in what she had to say about all the artwork, even though it
+seemed to her he had to _stoop down_ to her level.
+
+Eventually, both of them were starting to get hungry, and decided getting
+themselves a late lunch would be prudent. In order to leave the museum, they
+needed to go back the way they came.
+
+"`I'm glad I made the decision to go left,`" Bisky told the fox.
+
+"`I'm glad, too!`" he concurred.
