--- a/chapterx5.adoc
+++ b/chapterx5.adoc
@@ -24,8 +24,8 @@ captured by a resplendent model of a centuries-old brigantine which the
 group's representatives displayed on their table.
 
 "`The rigging is done really really nicely here,`" Bisky said. She addressed
-the three animals who were commandeering the table, but she was really
-talking directly to the model ship itself.
+the two animals who were commandeering the table, but she was really talking
+directly to the model ship itself.
 
 "`Oh, ahem, well yes, thank you!`" the ram beamed. He seemed to have been
 taken off-guard. "`Rigging her up was particularly annoying, with my horns
@@ -43,12 +43,37 @@ in the way, et cetera.`"
 looks like the wind is blowing into them? Mine just... lay flat, or look
 limp and lifeless, you know what I mean?`" 
 
-The ram had a difficult time believing what he was seeing. A girl into ship
-modeling? Not just a girl -- a _skunk girl_ into ship modeling?!
+The ram and the ferret equally had a difficult time believing what they were
+seeing. A girl into ship modeling? Not just a girl -- a _skunk girl_ into
+ship modeling?!
 
 "`Er, it's pretty simple if you're using the right material...`" the ram
-begun to explain.
+began to explain.
 
--- (stuff)
+Suddenly, Bisky realized that calling the Canine Club "`dogs and foxes just
+circlejerking,`" while taking a keen interest in the Campus Mephitidaeans,
+was tellingly speciesist.
 
-"`We think you'd fit in very nicely,`" the ferret said.
+Bisky didn't pay attention to the ram again until the he neared the end of
+his explanation. "`...if you came to our next meeting with your model, maybe
+could help improve your headsails.`"
+
+"`Sounds good!`"
+
+"`We meet Thursdays at 6:30 in the Arts building,`" the ram said, pawing her
+a postcard-sized flyer.
+
+"`We think you'd fit in very nicely,`" the ferret smiled.
+
+"`See you then!`" Bisky announced. When she turned around to meet the other
+clubs, she could hear the ram and the ferret huddle together to talk about
+what had just happened. Bisky couldn't believe she was going to show off her
+secret ship modelling hobby to potentially several nerds.
+
+The LGBT group's table was far more lively. The table was run by five or six
+animals, and there were already five or six other animals checking out what
+the club had to offer. Bisky approached the table and waved.
+
+"`Hello! How are you?`" a spiffily-dressed deer asked the newcomer.
+
+"`I'm alright, I'm alright!`" Bisky replied.
